# bolt-sensors

./: .clang-format  .clang-format-ignore  .clang-tidy  .clangd  .editorconfig  .gitignore  CMakeLists.txt  HST.bolt-sensors.pdsc  LICENSE  README.md
examples/: demo_tmp117.cpp
hardware-adapters/include/: cmsis_i2c_bus.hpp  mock_i2c_bus.hpp
hardware-adapters/src/: cmsis_i2c_bus.cpp  mock_i2c_bus.cpp
sensor-drivers/include/: device_base.hpp  tmp117.hpp
sensor-drivers/src/: device_base.cpp  tmp117.cpp
sensor-interfaces/include/: errors.hpp  i2c_bus.hpp  samples.hpp
